# clockin

./: README.md
desktop/: eslint.config.js  package.json
desktop/src/: App.tsx  error-page.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/admin/: AdminLayout.tsx  UserSearchBar.tsx
desktop/src/components/detection/: DetectedFacePreview.tsx  DetectedMatchModal.tsx  DetectedMatchPreview.tsx
desktop/src/components/detection/hooks/: useMatchFaceMutation.ts
desktop/src/components/general/: CenteredLoading.tsx
desktop/src/components/user/hooks/: useUserInfo.ts  useUserVerifications.ts  useUsers.ts
desktop/src/components/video/: FaceVideoFeed.tsx
desktop/src/routes/: UserInfoPage.tsx  adminPage.tsx  root.tsx
desktop/src/util/: constants.ts  types.ts
desktop/src/util/image/: base64ToFile.ts  blobToBase64.ts  getUploadedImageURL.ts
desktop/src/util/types/: detection.ts  user.ts
face_processing/: .gitignore  docker-compose.yml  main.py  pyproject.toml
face_processing/clockin_face_processing/config/: __init__.py  db.py  util.py
face_processing/clockin_face_processing/controller/: detection.py  user.py
face_processing/clockin_face_processing/dao/: models.py
face_processing/clockin_face_processing/dto/: detection_dto.py  user_dto.py
face_processing/clockin_face_processing/service/: detection.py  user.py
